--- a/sgbatu.html
+++ b/sgbatu.html
@@ -65,7 +65,7 @@
             const estateData = {
                 "id": "sgbatu",
                 "name": "Ladang Sungai Batu",
-                "reportInfo": "Data based on Planting Advisory Report 2/2025 (Visit: 20th Nov 2025) & Agronomy Report 1/2025.",
+                "reportInfo": "Data based on Plantation Advisory Report 2/2025 (Visit: 20th Nov 2025) & Agronomy Report 2/2025 (Visit: 27th Nov 2025).",
                 "summaryMetrics": {
                     "area": {
                         "title": "Total Area",
@@ -84,29 +84,29 @@
                     },
                     "upkeep": {
                         "title": "Key Issues",
-                        "value": "Weeding & Manuring",
-                        "note": "Programs delayed"
+                        "value": "Manuring & Drainage",
+                        "note": "Mix C delayed; Flooding in C3"
                     },
                     "pests": {
                         "title": "Pest & Disease Status",
                         "value": "Under Control",
-                        "note": "Rat damage negligible"
+                        "note": "Barn Owl Occ. 99%"
                     }
                 },
                 "keyMetrics": [
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-blue-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Labour Ratio", "value": "1 : 13 ha (Adequate)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-green-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "Low Pest Activity" },
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-green-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z' /></svg>", "label": "P&D Status", "value": "Low (Barn Owls 99%)" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-yellow-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M13 10V3L4 14h7v7l9-11h-7z' /></svg>", "label": "Harvester Prod.", "value": "1.92 MT/manday" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-green-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z' /></svg>", "label": "Crop Recovery", "value": "Satisfactory" },
                     { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-purple-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z' /></svg>", "label": "Harvest Interval", "value": "<15 days (Acceptable)" },
-                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17.657 18.343A8 8 0 016.343 7.029m11.314 11.314a8 8 0 01-11.314-11.314m2.121 13.435a2 2 0 01-2.828 0l-2.122-2.121a2 2 0 010-2.828l5.656-5.657a2 2 0 010 2.828l-5.657 5.657z' /></svg>", "label": "Nutrient Status", "value": "Suboptimal (Low N, P, K, Mg)" }
+                    { "icon": "<svg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6 text-teal-600' fill='none' viewBox='0 0 24 24' stroke='currentColor'><path stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M17.657 18.343A8 8 0 016.343 7.029m11.314 11.314a8 8 0 01-11.314-11.314m2.121 13.435a2 2 0 01-2.828 0l-2.122-2.121a2 2 0 010-2.828l5.656-5.657a2 2 0 012.829 0l2.121 2.121a2 2 0 010 2.828l-5.657 5.657z' /></svg>", "label": "Nutrient Status", "value": "Low Mg & N" }
                 ],
                 "chartData": {
                     "production": {
                         "labels": ["Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct"],
-                        "ffb": [1650, 1580, 1720, 1690, 1750, 1680, 1710, 1740, 1690, 1774], // Estimated based on YTD total and trend
-                        "rainfall": [229, 113, 173, 226, 806, 233, 146, 319, 107, 265],
-                        "note": "*Rainfall data from PAR 2/2025 Pg. 50. FFB trend estimated from YTD total."
+                        "ffb": [1441.80, 1399.00, 1418.70, 1501.25, 1512.80, 1340.80, 1826.85, 1983.20, 2055.35, 2504.30], 
+                        "rainfall": [229, 113, 173, 226, 806, 233, 146, 319, 265, 553],
+                        "note": "*Data source: Agronomy Report 2/2025 Appendices 3(b) & 4."
                     },
                     "ageProfile": {
                         "labels": ["Old Mature (>=19Y)", "Prime Mature"],
@@ -116,12 +116,12 @@
                     }
                 },
                 "observations": [
-                    "<b>Weeding Program Delayed:</b> Weeding is slightly delayed (2 rounds completed vs 3 budgeted). Noxious weeds (VOPs, clidemia, etc.) were found dominating palm circles and boundaries. Immediate eradication required. <span class='observation-ref'>(PAR 2/2025 Pg. 4, 16, 19)</span>",
-                    "<b>Manuring Behind Schedule:</b> The manuring program is behind schedule. The last application of Mixture C has not been completed in most fields (except P07D). The program must be brought up to date by November. <span class='observation-ref'>(PAR 2/2025 Pg. 5, 26)</span>",
-                    "<b>Road Conditions Poor:</b> No road grading carried out this year. Road conditions are bad (soggy/slippery). Surfacing with crusher run is slow (only 248 tons purchased vs 500 tons budget). <span class='observation-ref'>(PAR 2/2025 Pg. 5, 22-23)</span>",
-                    "<b>Pruning Quality Issues:</b> While progressive pruning is underway (3rd round 28% complete), quality needs improvement. Dried hanging fronds were found in all fields. <span class='observation-ref'>(PAR 2/2025 Pg. 27)</span>",
-                    "<b>Suboptimal Nutrient Status (Agronomy):</b> 2024 leaf analysis showed N, P, K, and Mg levels below optimum. Mild deficiency symptoms visible. <span class='observation-ref'>(AR 1/2025 Pg. 22)</span>",
-                    "<b>Strong Yield Performance:</b> Despite agronomic delays, yield per ha (19.15 MT) is 6% higher than budget. <span class='observation-ref'>(PAR 2/2025 Pg. 33)</span>"
+                    "<b>Drainage Issue:</b> Localized flooding in sub-block C3 affecting approx. 60 palms. Construction of additional drain recommended. <span class='observation-ref'>(AR 2/2025 Pg. 5, 20)</span>",
+                    "<b>Manuring Delayed:</b> Application of Mixture C is pending completion due to late delivery. Program expected to complete by mid-Dec 2025. <span class='observation-ref'>(AR 2/2025 Pg. 4, 11)</span>",
+                    "<b>Weeding Observations:</b> Generally satisfactory (AR), but specific patches of <i>Clidemia hirta</i> and <i>Ageratum conyzoides</i> found in C3, C4, A1, and D2. Previous report noted delay in programs. <span class='observation-ref'>(AR 2/2025 Pg. 5, 22; PAR 2/2025 Pg. 19)</span>",
+                    "<b>Road Conditions:</b> Road conditions remain poor (soggy/slippery) with no grading done this year. Surfacing is behind budget. <span class='observation-ref'>(PAR 2/2025 Pg. 22-23)</span>",
+                    "<b>Nutrient Status:</b> Leaf analysis indicates suboptimal Magnesium (Mg) and Nitrogen (N) levels. Visible K and B deficiency symptoms should be monitored. <span class='observation-ref'>(AR 2/2025 Pg. 5, 19)</span>",
+                    "<b>Pruning Standards:</b> Generally acceptable (AR), though hanging fronds were noted in the previous advisory report. Final round progressing. <span class='observation-ref'>(AR 2/2025 Pg. 4, 15; PAR 2/2025 Pg. 27)</span>"
                 ],
                 "reports": {
                     "plantation": { 
@@ -138,11 +138,12 @@
                         "Capital Expenditure": "Total Spent: RM 513,675.46. Includes construction of 2 units of concrete bridges (20'x14') in P05A and P07C costing RM 139,000. <span class='observation-ref'>(PAR 2/2025 Pg. 37)</span>"
                     },
                     "agronomy": {
-                        "Executive Summary": "The agronomic condition is acceptable. The estate achieved a strong yield of 23.04 MT/ha in 2024, but the YTD 2025 yield has declined by 8%. Manuring and weeding programs are progressing but face some delays and quality issues. Pest levels are low and crop recovery is satisfactory. <span class='observation-ref'>(AR Pg. 4-6)</span>",
-                        "Nutrient Inputs/Progress of Manuring": "The 2024 manuring program was 100% completed. The 2025 program is 30% complete as of April. The application quality of Mixture C was noted as suboptimal (narrow band) and was demonstrated correctly to the workers for improvement. <span class='observation-ref'>(AR Pg. 11-13)</span>",
-                        "Agronomic Observation": "Crop recovery is satisfactory with harvesting intervals of 13-17 days. The first round of pruning for 2025 is complete with acceptable standards. Palm appearance is generally good, though mild K & B deficiency symptoms were noted. Circle weeding is behind schedule (54% complete). Rat infestation is below the economic threshold. <span class='observation-ref'>(AR Pg. 15, 18, 22, 24, 32)</span>",
-                        "Yield Performance": "2024 yield was excellent at 23.04 MT/ha, a 16% increase from 2023. However, the YTD April 2025 yield is 6.50 MT/ha, which is an 8% decrease compared to the same period in 2024. <span class='observation-ref'>(AR Pg. 35, 37)</span>",
-                        "Fertilizer Recommendation": "There is no amendment to the 2025 fertilizer program. The 2026 program will be formulated based on new leaf nutrient analysis to be conducted this year. <span class='observation-ref'>(AR Pg. 39)</span>"
+                        "Executive Summary": "Yield in 2024 was satisfactory (23.04 MT/ha), though YTD Oct 2025 is slightly lower at 19.15 MT/ha. Crop recovery is satisfactory, but Manuring (Mix C) is delayed. No serious P&D issues. <span class='observation-ref'>(AR 2/2025 Pg. 5, 32)</span>",
+                        "Nutrient Inputs/Progress of Manuring": "<b>Completion Status:</b><br>- Mix B (Jan, Feb, Jul): 100%<br>- Kieserite (Mar): 100%<br>- RP (Jun, Aug): 100%<br>- Mix C (Apr, May, Oct): Oct round only 35% complete.<br><b>Issue:</b> Mix C delivery delayed due to stock issues. Expected completion: Mid-Dec 2025. <span class='observation-ref'>(AR 2/2025 Pg. 10-11)</span>",
+                        "Agronomic Observation": "<b>Leaf Nutrient Status:</b><br>- <b>Nitrogen (N):</b> Low in most fields; Deficient in A2, C4.<br>- <b>Magnesium (Mg):</b> Suboptimal in most blocks.<br>- <b>Potassium (K):</b> Normal to High.<br>- <b>Flooding:</b> 60 palms in C3 affected; sub-drainage recommended.<br><br><b>Weeding:</b><br>- Progress: 2 rounds completed (Acceptable).<br>- Issues: <i>Clidemia hirta</i> in C3, C4, A1; <i>Ageratum conyzoides</i> in C4, D2.<br><br><b>Pruning:</b><br>- 2nd Round: 100% Complete.<br>- Standard: Acceptable.<br><br><b>Harvesting:</b><br>- Intervals: Generally <20 days.<br>- Mechanization: Mechanical Badang efficiency at 9.06 MT/day. <span class='observation-ref'>(AR 2/2025 Pg. 13, 15, 19, 22)</span>",
+                        "Pest & Disease Control": "<b>Rats:</b> Infestation insignificant (<5%). No baiting required.<br><b>Barn Owls:</b> High occupancy (81/82 boxes, 99%). Ratio 1:11 ha.<br><b>Ganoderma:</b> Low incidence (4-11 palms/field). <span class='observation-ref'>(AR 2/2025 Pg. 27-29)</span>",
+                        "Yield Performance": "<b>YTD Oct 2025:</b> 19.15 MT/ha (-0.4% vs 2024).<br><b>Highest Yielders:</b> A1, B1, B2, C1, C2 (Surplus).<br><b>Production Trend:</b> Oct 2025 recorded highest monthly output (2,504 MT). <span class='observation-ref'>(AR 2/2025 Pg. 12, 32)</span>",
+                        "Fertilizer Recommendation": "2026 Fertilizer Programme has been formulated and outlined in Appendix 1. <span class='observation-ref'>(AR 2/2025 Pg. 36)</span>"
                     },
                      "pinfosys": {
                         "CEO-Level Summary": "Not Available (Pinfosys report was not provided).",
@@ -255,7 +256,6 @@
                                return `<h4 class="font-semibold mt-2 text-gray-800">${formattedSection}:</h4><p class="text-sm text-gray-600">${content}</p>`
                             }).join('');
                         } else {
-                            // Handle simple string case like "Not Available"
                             div.innerHTML = `<p class="text-sm text-gray-600">${estateData.reports[reportType]}</p>`;
                         }
                     }
